tests/src/frontend/syntax/invalid/lambda_inconsistent_param_types_3.sk
fun main(): String {
  l = {p1: String, p2} -> p1;
  l{p1 => "Fail", p2 => 42}
}
